# emiv.tr

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  intall.sh  vercel.json
src/: animations.rs  app.rs  data.rs  main.rs
src/ui/: components.rs  mod.rs  views.rs
