[package]
name = "emiv-website"
version = "0.1.0"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.3"
ratzilla = "0.0.6"
textwrap = "0.16.1"
gridlife = "0.0.2"
unicode-width = "0.2.0"
tachyonfx = { version = "0.15.0", default-features = false, features = ["web-time"] }
console_error_panic_hook = "0.1.7"
